--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./img/insta-icon.png" />
+    <link rel="icon" href="./assets/img/insta-icon.png" />
     <link rel="stylesheet" href="./style.css">
     <title>Instagram</title>
 </head>
@@ -15,8 +15,8 @@
     </div>
     <div class="right">
         <div class="continue-logon">
-            <img class="logo" src="./img/instagram-logo.png" />
-            <img class="current-user" src="./img/vw-gol-g5.jpg" />
+            <img class="logo" src="./assets/img/instagram-logo.png" />
+            <img class="current-user" src="./assets/img/vw-gol-g5.jpg" />
             <button class="continue">Continue as gol_g5</button>
             <button class="remove">Remove account</button>
         </div>
@@ -33,8 +33,8 @@
         <div class="get-app">
             <strong>Get the app.</strong>
             <div class="download-app">
-                <img src="./img/apple-button.png" alt="app-store">
-                <img src="./img/googleplay-button.png" alt="google-play">
+                <img src="./assets/img/apple-button.png" alt="app-store">
+                <img src="./assets/img/googleplay-button.png" alt="google-play">
             </div>
         </div>
     </div>
